change from W5x00_Multicast to W5x00-Multicast

--- a/TrueStudio/W5x00_Multicast/.project
+++ b/TrueStudio/W5x00_Multicast/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>W5X00_Multicast</name>
+	<name>W5X00-Multicast</name>
 	<comment></comment>
 	<projects>
 	</projects>
