--- a/TrueStudio/W5x00_Multicast/.settings/com.atollic.truestudio.debug.hardware_device.prefs
+++ b/TrueStudio/W5x00_Multicast/.settings/com.atollic.truestudio.debug.hardware_device.prefs
@@ -1,7 +1,7 @@
 BOARD=None
 CODE_LOCATION=FLASH
 ENDIAN=Little-endian
-MCU=default
+MCU=STM32F401RE
 MCU_VENDOR=STMicroelectronics
 MODEL=Lite
 PROBE=ST-LINK
